[gd_scene load_steps=3 format=2]

[ext_resource path="res://GOL_controller/ZoneRules.gd" type="Script" id=1]
[ext_resource path="res://GOL_controller/PresetRulesMenuButton.gd" type="Script" id=2]

[node name="Zone" type="PanelContainer"]
margin_right = 245.0
margin_bottom = 177.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 238.0
margin_bottom = 170.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 231.0
margin_bottom = 14.0

[node name="Survival" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 113.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Survival"]
margin_right = 113.0
margin_bottom = 14.0
hint_tooltip = "A cell survives if it has this many neighbors"
mouse_filter = 1
text = "Survival"

[node name="Birth" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 117.0
margin_right = 231.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Birth"]
margin_right = 114.0
margin_bottom = 14.0
hint_tooltip = "A dead cell becomes alive if it has this many neighbors"
mouse_filter = 1
text = "Birth"

[node name="PresetRulesMenuButton" type="MenuButton" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 231.0
margin_bottom = 38.0
text = "Notable rules"
flat = false
script = ExtResource( 2 )

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 231.0
margin_bottom = 86.0
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 3.0
margin_right = 114.0
margin_bottom = 17.0
hint_tooltip = "Color of living cells"
mouse_filter = 1
size_flags_horizontal = 3
text = "Alive"

[node name="AliveColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/GridContainer"]
margin_left = 118.0
margin_right = 231.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 27.0
margin_right = 114.0
margin_bottom = 41.0
hint_tooltip = "Color of dead cells"
mouse_filter = 1
text = "Dead"

[node name="DeadColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/GridContainer"]
margin_left = 118.0
margin_top = 24.0
margin_right = 231.0
margin_bottom = 44.0
size_flags_horizontal = 3

[connection signal="rules_RLE_changed" from="VBoxContainer/PresetRulesMenuButton" to="." method="_on_PresetRulesMenuButton_rules_RLE_changed"]
[connection signal="color_changed" from="VBoxContainer/GridContainer/AliveColorPickerButton" to="." method="_on_AliveColorPickerButton_color_changed"]
[connection signal="color_changed" from="VBoxContainer/GridContainer/DeadColorPickerButton" to="." method="_on_DeadColorPickerButton_color_changed"]
